--- a/css/pauls.css
+++ b/css/pauls.css
@@ -42,11 +42,6 @@ hr {
     background: rgba(255,255,255,0.8);
 }
 
-header .box {
-    padding: 0 10%;
-    background: rgba(255,255,255,0.6);
-}
-
 .intro-text {
     text-align:center;
 }
@@ -75,7 +70,7 @@ a:visited {color:darkolivegreen;}
 a:hover {color:darkred;}
 a:active {color:darkolivegreen;}
 
-@media screen and (min-width:500px) {
+@media screen and (min-width:1200px) {
     .brand {
         display: inherit;
         margin: 10%;
@@ -120,10 +115,14 @@ a:active {color:darkolivegreen;}
         text-align: center;
     }
 
-
+    header .box {
+    margin-bottom: 20px;
+    padding: 0 50px;
+    background: rgba(255,255,255,0.8);
+    }
 }
 
-@media screen and (max-width:499px) {
+@media screen and (max-width:1199px) {
     .brand {
         display: inherit;
         margin: 0;
@@ -170,9 +169,8 @@ a:active {color:darkolivegreen;}
     }
 
     header .box {
-    margin-bottom: 20px;
-    padding: 10% 10%;
-    background: rgba(255,255,255,1.0);
+        padding: 2px 10px 60px 50px;
+        background: rgba(255,255,255,0.8);
     }
 }
 
