--- a/css/pauls.css
+++ b/css/pauls.css
@@ -70,6 +70,16 @@ a:visited {color:darkolivegreen;}
 a:hover {color:darkred;}
 a:active {color:darkolivegreen;}
 
+    .centerimg {
+        display: inherit;
+        margin: 0;
+        text-align: center;
+    }
+
+button {
+    width: 10em;  height: 10em;
+}
+
 @media screen and (min-width:1200px) {
     .brand {
         display: inherit;
@@ -109,11 +119,11 @@ a:active {color:darkolivegreen;}
         margin-bottom: 10%;
     }
 
-    .centerimg {
+    /*.centerimg {
         display: inherit;
         margin: 0;
         text-align: center;
-    }
+    }*/
 
     header .box {
     margin-bottom: 20px;
@@ -162,11 +172,11 @@ a:active {color:darkolivegreen;}
         margin-bottom: 10%;
     }
 
-    .centerimg {
+    /*.centerimg {
         display: inherit;
         margin: 0;
         text-align: center;
-    }
+    }*/
 
     header .box {
         padding: 2px 10px 60px 50px;
