--- a/css/pauls.css
+++ b/css/pauls.css
@@ -77,7 +77,9 @@ a:active {color:darkolivegreen;}
     }
 
 button {
-    width: 10em;  height: 10em;
+    width: 10em;  
+    height: 10em;
+    background-color:rgba(255,255,255,0.5);
 }
 
 @media screen and (min-width:1200px) {
