--- a/css/pauls.css
+++ b/css/pauls.css
@@ -82,6 +82,17 @@ button {
     background-color:rgba(255,255,255,0.5);
 }
 
+    .footer {
+        display: inherit;
+        text-align: center;
+        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+        font-size: 0.7em;
+        font-style:italic;
+        color:darkgoldenrod;
+        margin-bottom: 1%;
+        vertical-align:middle;
+    }
+
 @media screen and (min-width:1200px) {
     .brand {
         display: inherit;
