--- a/css/pauls.css
+++ b/css/pauls.css
@@ -84,9 +84,11 @@ button {
 
     .footer {
         display: inherit;
+        border:5px solid white;
+        margin: 30px 2px;
         text-align: center;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-size: 0.7em;
+        font-size: 0.8em;
         font-style:italic;
         color:darkgoldenrod;
         margin-bottom: 1%;
